--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dilukangelosl/crypto-price-fetcher.git"
+    },
+    "bugs": {
+        "url": "https://github.com/dilukangelosl/crypto-price-fetcher/issues"
+    },
+    "homepage": "https://github.com/dilukangelosl/crypto-price-fetcher#readme",
     "exports": {
         ".": {
             "import": "./dist/index.mjs",
